# hackaton

./: .env.example  .gitignore  LICENSE  README.md  Tatar_San_2025_Full_Info.md  hackaton.service  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
src/: ai_client.py  bot.py  config.py  filters.py  formatters.py  handlers.py  main.py  media_processor.py  state.py  storage.py  web_search.py
tests/: test_ai_client.py  test_formatting.py  test_main.py  test_state.py  test_storage.py
